# ipeds-database

./: avg_salary.ipynb  basic_test.py  build_database.py  cipcodes2020.csv  completion_experiment.ipynb  pyproject.toml
experiments/: all_tables.ipynb  ic.ipynb  pca_naive_join.ipynb
